--- a/views/list.ejs
+++ b/views/list.ejs
@@ -21,7 +21,7 @@
     </ul>
     <form class="item" action="/" method="post">
       <input type="text" name="newItem" placeholder="New item" autocomplete="off" />
-      <button type="submit" name="listType" value="<%= listTitle %>"">+</button>
+      <button type="submit" name="listType" value="<%= listTitle %>">+</button>
       </form>
     </div>
 
